fixed the rotate on mobile phones

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,8 +1,4 @@
-header {
-  /* height: 136vh; */
-  /* padding-top: 7rem; */
-  
-}
+
 
 .background_Logos {
   display: flex;
